# Mie_Postprocessing_Py

./: .gitignore  GUI.py  GUI_new.py  LICENSE  MANIFEST.in  MLP.ipynb  Model_GUI.py  Model_GUI_hetero.py  README.md  Schlieren_singlehole_pipeline.py  backfill_injection_duration.py  cone_angle.py  create_overview_video.py  data_checker.py  demo_penetration_inference.py  demo_plot_npz.py  functions_videos.py  impingement_gui.py  luminesence.py  main.py  main_utils_temp.py  manual_segment.py  metrics_derivations.html  mie_multi_hole.py  mie_multihole_pipeline.py  mie_single_hole.py  napari_viewer.py  patch.diff  penetration_files_to_data.py  pipeline_test.py  prepare_images.py  prepare_penetration_data.py  pyproject.toml  schlieren_singlehole_pipeline.py  singlehole_pipeline.py  sitecustomize.py  slide_maker.py  test.py  test_mask.npy  train_mlp_penetration.py  (+1 more)
.claude/: settings.json  settings.local.json
Dewe/: dewe.py  dewe_read.py  heat_release_calulation.py
MLP/: MLP_all_injectors.py  NLL_all_injector.ipynb  PINN_all_injector.ipynb  analyze_cdf_fit_bias.py  best_nll_hetero_censored.pt  calc_ratio.py  cleanup_mlp_artifacts.py  dataframe_builder.py  dataframe_test.py  dataset_summary.txt  distillation_plus_raw_series.ipynb  fit_raw_data.py  gradient_stability_diagnostics.py  impingement_core.py  impingement_manim_scene.py  impingement_prediction.ipynb  impingement_with_piston_prototype.ipynb  mean_penetration_MSE.ipynb  mean_penetration_NLL.ipynb  median_penetration_MSE.ipynb  median_penetration_NLL.ipynb  penetration_data_utils.py  penetration_files_to_data.py  prepare_penetration_data.py  rewrite_fit_raw_data.py  slides_stage1_to_nll.tex  slides_stage2_warmstart_nll.tex  summarize_dataset.py  toy_inference_from_run.ipynb  toy_inference_from_run.py  train_NLL_penetration.ipynb  train_mlp_penetration.ipynb  train_mlp_penetration.py  train_mlp_spray.ipynb
MLP/GP_training/: GP_BASELINE_PLAN.md  eval_gp_on_uncensored_cdf.py  eval_residual_multitask_svgp_on_point_tables.py  residual_multitask_svgp.py  run_gp_baseline.py  run_residual_multitask_svgp.py  run_residual_multitask_svgp_production.py
MLP/MLP_training/: OOD_LONO_PLAN.md  README.md  compare_delta_p_exponent_collapse.py  convert_stage3_single_to_family_head.py  emit_stage3_headline.py  engineered_feature_common.py  engineered_feature_common_ORIGINAL.py  eval_gp_on_uncensored_cdf.py  full_pipeline_config.json  post_eval_hooks.py  (+16 more)
Mie_GUI/: GUI.py  cone_angle.py  functions_videos.py
OSCC_postprocessing/: Data_cleaning_1d_series.py  __init__.py  async_npz_saver.py  async_plot_saver.py  circ_calculator.py  functions_bw.py  functions_videos.py  inference_penetration.py  inference_penetration_hetero.py  multihole_utils.py  optical_flow.py  rotate_with_alignment_cpu.py  single_plume.py  video_filters.py  video_playback.py
Results/: sam3_local_video_smoketest.json
Thesis/: LATEX_ENVIRONMENT.md  README.md  aaltothesis.cls  build_reference_audit.py  build_thesis.cmd  build_thesis_wsl.sh  chapter04_review_v2.md  chapter04_takeaway_patch_plan.md  figure_provenance_ch04_05.md  intro_mice_slides_en.tex  intro_mice_slides_zh.tex  mie_video_to_1d_dataflow.tex  neural_network_fit_results_slides_en.tex  neural_network_fit_results_slides_zh.tex  pdfa.xmpi  regenerate_thesis_figures.py  thesis.aux  thesis.bbl  thesis.bcf  thesis.blg  thesis.out  thesis.run.xml  thesis.tex  thesis.toc  thesis.xmpdata  thesis_zh.aux  thesis_zh.bbl  thesis_zh.bcf  thesis_zh.blg  thesis_zh.out  thesis_zh.run.xml  thesis_zh.tex  thesis_zh.toc  thesis_zh.xmpdata  thesisreferences.bib  thesisreferences_audit.tsv
docs/: impingement_gui_setup.md  nvidia_hw_optical_flow_setup.md  oscc_postprocessing_structure.md  oscc_release_audit.md  oscc_rotation.md  refined_research_plan.md  sam2_setup.md
examples/: Sam3.ipynb  Schlieren_singlehole_pipeline.py  boundary_reader.ipynb  cine_lowpass_svd_comparison.ipynb  cine_temporal_fft_analysis.ipynb  demo_penetration_inference.py  demo_plot_npz.py  dewe_example.ipynb  folder_browser.ipynb  hermite.ipynb  luminesence.ipynb  matplotlib_video_displayer.py  mie_multihole.ipynb  mie_multihole_v2.ipynb  mie_multihole_v3.ipynb  mie_singlehole.ipynb  mie_thesis_draft.ipynb  napari_viewer.py  optical_flow_cine_demo.ipynb  pipeline_test.py  play_video_with_bounary.py  sch_test_1018.py  schelieren.ipynb  test.py  verify_gui_centre_alignment.py
mie_postprocessing/: __init__.py  async_avi_saver.py  bilateral_filter.py  cine_utils.py  circ_calculator.py  cone_angle.py  functions_bw.py  functions_rotation.py  functions_videos.py  inference_penetration.py  masking.py  morphological.py  multihole_utils.py  optical_flow.py  rotate_crop.py  rotate_with_alignment.py  single_plume.py  svd_background_removal.py  video_filters.py
mie_postprocessing.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
native/nvidia_of_bridge/: CMakeLists.txt  nvof_bridge.cpp  nvof_bridge_kernels.cu  nvof_utils_stub.cpp
pipelines/: README.md  run_full.py
piston/: design_A.py  design_B.py  design_hermite.py  generate_hermite_figure.py  utils.py
repair_scripts_temp/: backfill_injection_duration.py  backfill_penetration_mm_columns.py  cone_angle_sanity_check.py  occupied_angle_io_audit.py  occupied_angle_stratified.py  test_boundary_yx_alignment.py  test_periodic_segment_lengths.py
runs_mlp/: best_model.pt  metrics.json  scalers.json
scripts/: download_sam2.py  download_sam3.py  export_sam3_video_results.py  generate_thesis_publication_notebook.py  mie_sensitivity_audit.py  rename_frames_for_sam3.py  run_in_sam3_wsl_env.sh  run_sam31_smoketest.py  run_sam3_local_video_smoketest.py  run_sam3_smoketest.py  sam31_setup.md  sam3_setup.md  setup_nvidia_optical_flow_windows.ps1  setup_sam31.ps1  setup_sam31_wsl.sh  setup_sam3_windows.ps1
slide_maker/: README.md  comparison_viewer.py  load_comparison.py  process_all.py
test_latex/: mie.tex
test_matrix/: Nozzle1.py  Nozzle2.py  Nozzle4.py
test_matrix_json/: DS300.json  Nozzle0.json  Nozzle1.json  Nozzle2.json  Nozzle3.json  Nozzle4.json  Nozzle5.json  Nozzle6.json  Nozzle7.json  Nozzle8.json
(+685 files in other folders)
