[build-system]
requires = [
  "setuptools>=68",
  "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "mie-postprocessing"
version = "0.1.0"
description = "Utilities for Mie imaging post-processing (masking, filters, plotting, I/O)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Proprietary" }
authors = [
  { name = "Jiang" }
]
dependencies = [
  "numpy>=1.23",
  "matplotlib>=3.6",
  "scipy>=1.9",
  "scikit-image>=0.20",
  "opencv-python>=4.7",
  "Pillow>=9.5",
  "scikit-learn>=1.2",
  "torch>=2.0; platform_system != 'Windows' or platform_machine != 'ARM64'"
]

[project.optional-dependencies]
cine = [
  "pycine>=0.2.0"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["OSCC_postprocessing*"]
