[build-system]
requires = [
  "setuptools>=68",
  "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "oscc-postprocessing"
version = "0.1.0"
description = "Utilities for Mie imaging post-processing (masking, filters, plotting, I/O)."
readme = "README.md"
requires-python = ">=3.9"
license = "LicenseRef-Proprietary"
license-files = ["LICENSE"]
authors = [
  { name = "Jiang" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Image Processing"
]
dependencies = [
  "numpy>=1.23",
  "matplotlib>=3.6",
  "scipy>=1.9",
  "scikit-image>=0.20",
  "opencv-python>=4.7",
  "Pillow>=9.5",
  "scikit-learn>=1.2",
  "torch>=2.0; platform_system != 'Windows' or platform_machine != 'ARM64'",
  "imageio-ffmpeg>=0.4"
]

[project.optional-dependencies]
cine = [
  "pycine>=0.2.0"
]
masters-thesis = [
  "pycine>=0.2.0"
]
gui = [
  "PySide6>=6.6"
]
gpu = [
  "cupy>=13"
]

[project.scripts]
oscc-masters-thesis = "OSCC_postprocessing.masters_thesis.cli:main"

[project.urls]
Homepage = "https://github.com/Lemonterminator/Mie_Postprocessing_Py"
Repository = "https://github.com/Lemonterminator/Mie_Postprocessing_Py"
Issues = "https://github.com/Lemonterminator/Mie_Postprocessing_Py/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"OSCC_postprocessing.masters_thesis.resources" = [
  "*.json"
]

[tool.setuptools.exclude-package-data]
"OSCC_postprocessing.dewe" = [
  "DeweFileLibrary/*.dll",
  "DeweFileLibrary/*.so",
  "DeweFileLibrary/*.zip"
]

[tool.setuptools.packages.find]
include = ["OSCC_postprocessing*"]
